K8s/Kustomize/base/sockshop/carts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts
  # annotations:
  #       prometheus.io/scrape: 'true'
  labels:
    name: carts
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
